[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QNScheduling"
version = "0.1.0"
description = "A simulator for quantum network scheduling"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [{ name = "Quang-Phong Tran", email = "quangphong755@gmail.com" }]

[project.scripts]
run_simulation = "scheduling:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["scheduling", "utils"]

[tool.coverage.run]
omit = [
  "scheduling/__init__.py",
  "scheduling/main.py",
  "utils/plots.py",
  "utils/parallel_simulations.py",
  "utils/__init__.py",
  "utils/run_scenarios.py",
]

[tool.coverage.report]
exclude_also = [
  'if __name__ == .__main__.:',
]

[project.urls]
Repository = "https://github.com/Quang00/QNScheduling"
